# idb-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  build.rs
.github/workflows/: CI.yaml
doc/: fileformat.md
resources/bins/: print_arg.c  print_arg_O0  print_arg_O3  print_arg_m32_O0.elf  print_arg_m32_O3.elf  print_arg_m64_O0.elf  print_arg_m64_O3.elf  shell.nix  simple_user_data.c  simple_user_data_O0  simple_user_data_m32_O0  simple_user_data_m32_O0.elf  simple_user_data_m32_O3.elf  simple_user_data_m64_O0.elf  simple_user_data_m64_O3.elf
resources/idbs/: NOTICE.md  README.md
resources/idc-diff/: .gitignore  gen-idb-rs.sh
resources/tilib-diff/: .gitignore  gen-idb-rs-layout.sh  gen-idb-rs.sh  gen-tilib-layout.sh  gen-tilib.sh
src/: addr_info.rs  api.rs  bytes_info.rs  id0.rs  id1.rs  id2.rs  ida_reader.rs  lib.rs  nam.rs  sdk_comp.rs  test.rs  til.rs
src/api/: bytes.rs  frame.rs  funcs.rs  lines.rs  nalt.rs  netnode.rs  pro.rs  range.rs  segment.rs
src/id0/: address_info.rs  btree.rs  db.rs  dirtree.rs  entry_iter.rs  file_region.rs  flag.rs  function.rs  patch.rs  reference_info.rs  root_info.rs  segment.rs
src/id1/: flag.rs
src/sdk_comp/: bytes.rs  funcs.rs  inner.rs  lines.rs  loader.rs  nalt.rs  netnode.rs  pro.rs  range.rs  segment.rs  typeinf.rs
src/snapshots/: .gitignore  idb_rs__test__parse_idb_data@ComRAT-Orchestrator.i64__database_creation_time.snap  idb_rs__test__parse_idb_data@ComRAT-Orchestrator.i64__database_num_opens.snap  idb_rs__test__parse_idb_data@ComRAT-Orchestrator.i64__database_secs_opens.snap  (+848 more)
(+48 files in other folders)
