[package]
name = "idb-rs"
version = "0.1.9"
authors = ["Rubens Brandao <git@rubens.io>"]
edition = "2021"
license-file = "LICENSE"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
bincode = "1.3.3"
flate2 = "1.0.31"
serde = { version = "1.0", features = ["derive"] }
num_enum = "0.7.3"
num-traits = "0.2.19"
byteorder = "1.5.0"

[features]
default = []
restrictive = []

[[bin]]
name = "idb-tools"
path = "src/tools/tools.rs"
